Fill in parts of the table

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -3977,19 +3977,19 @@ However, most authors do not need detailed understanding of the algorithms since
          </tr>
 							  <tr>
 										<td><a href="https://www.w3.org/TR/wai-aria-1.1/#alert"><code>alert</code></a></td>
-										<td>namerequired</td>
+										<td>Sometimes</td>
 										<td>No</td>
-										<td>guidance</td>
+										<td>A name can sometimes be useful to know what kind of alert it is.</td>
 									</tr>
 									<tr>
 										<td><a href="https://www.w3.org/TR/wai-aria-1.1/#alertdialog"><code>alertdialog</code></a></td>
-										<td>namerequired</td>
+										<td>Always</td>
 										<td>No</td>
 										<td>guidance</td>
 									</tr>
 									<tr>
 										<td><a href="https://www.w3.org/TR/wai-aria-1.1/#application"><code>application</code></a></td>
-										<td>namerequired</td>
+										<td>Always</td>
 										<td>No</td>
 										<td>guidance</td>
 									</tr>
@@ -4007,7 +4007,7 @@ However, most authors do not need detailed understanding of the algorithms since
 									</tr>
 									<tr>
 										<td><a href="https://www.w3.org/TR/wai-aria-1.1/#button"><code>button</code></a></td>
-										<td>namerequired</td>
+										<td>Always</td>
 										<td>Yes</td>
 										<td>guidance</td>
 									</tr>
@@ -4019,19 +4019,19 @@ However, most authors do not need detailed understanding of the algorithms since
 									</tr>
 									<tr>
 										<td><a href="https://www.w3.org/TR/wai-aria-1.1/#checkbox"><code>checkbox</code></a></td>
-										<td>namerequired</td>
+										<td>Always</td>
 										<td>Yes</td>
 										<td>guidance</td>
 									</tr>
 									<tr>
 										<td><a href="https://www.w3.org/TR/wai-aria-1.1/#columnheader"><code>columnheader</code></a></td>
-										<td>namerequired</td>
+										<td>Always</td>
 										<td>Yes</td>
 										<td>guidance</td>
 									</tr>
 									<tr>
 										<td><a href="https://www.w3.org/TR/wai-aria-1.1/#combobox"><code>combobox</code></a></td>
-										<td>namerequired</td>
+										<td>Always</td>
 										<td>No</td>
 										<td>guidance</td>
 									</tr>
@@ -4055,7 +4055,7 @@ However, most authors do not need detailed understanding of the algorithms since
 									</tr>
 									<tr>
 										<td><a href="https://www.w3.org/TR/wai-aria-1.1/#dialog"><code>dialog</code></a></td>
-										<td>namerequired</td>
+										<td>Always</td>
 										<td>No</td>
 										<td>guidance</td>
 									</tr>
@@ -4091,13 +4091,13 @@ However, most authors do not need detailed understanding of the algorithms since
 									</tr>
 									<tr>
 										<td><a href="https://www.w3.org/TR/wai-aria-1.1/#grid"><code>grid</code></a></td>
-										<td>namerequired</td>
+										<td>Always</td>
 										<td>No</td>
 										<td>guidance</td>
 									</tr>
 									<tr>
 										<td><a href="https://www.w3.org/TR/wai-aria-1.1/#gridcell"><code>gridcell</code></a></td>
-										<td>namerequired</td>
+										<td>Always</td>
 										<td>Yes</td>
 										<td>guidance</td>
 									</tr>
@@ -4109,19 +4109,19 @@ However, most authors do not need detailed understanding of the algorithms since
 									</tr>
 									<tr>
 										<td><a href="https://www.w3.org/TR/wai-aria-1.1/#heading"><code>heading</code></a></td>
-										<td>namerequired</td>
+										<td>Always</td>
 										<td>Yes</td>
 										<td>guidance</td>
 									</tr>
 									<tr>
 										<td><a href="https://www.w3.org/TR/wai-aria-1.1/#img"><code>img</code></a></td>
-										<td>namerequired</td>
+										<td>Always</td>
 										<td>No</td>
 										<td>guidance</td>
 									</tr>
 									<tr>
 										<td><a href="https://www.w3.org/TR/wai-aria-1.1/#link"><code>link</code></a></td>
-										<td>namerequired</td>
+										<td>Always</td>
 										<td>Yes</td>
 										<td>guidance</td>
 									</tr>
@@ -4133,7 +4133,7 @@ However, most authors do not need detailed understanding of the algorithms since
 									</tr>
 									<tr>
 										<td><a href="https://www.w3.org/TR/wai-aria-1.1/#listbox"><code>listbox</code></a></td>
-										<td>namerequired</td>
+										<td>Always</td>
 										<td>No</td>
 										<td>guidance</td>
 									</tr>
@@ -4145,7 +4145,7 @@ However, most authors do not need detailed understanding of the algorithms since
 									</tr>
 									<tr>
 										<td><a href="https://www.w3.org/TR/wai-aria-1.1/#log"><code>log</code></a></td>
-										<td>namerequired</td>
+										<td>Always</td>
 										<td>No</td>
 										<td>guidance</td>
 									</tr>
@@ -4157,7 +4157,7 @@ However, most authors do not need detailed understanding of the algorithms since
 									</tr>
 									<tr>
 										<td><a href="https://www.w3.org/TR/wai-aria-1.1/#marquee"><code>marquee</code></a></td>
-										<td>namerequired</td>
+										<td>Always</td>
 										<td>No</td>
 										<td>guidance</td>
 									</tr>
@@ -4181,19 +4181,19 @@ However, most authors do not need detailed understanding of the algorithms since
 									</tr>
 									<tr>
 										<td><a href="https://www.w3.org/TR/wai-aria-1.1/#menuitem"><code>menuitem</code></a></td>
-										<td>namerequired</td>
+										<td>Always</td>
 										<td>Yes</td>
 										<td>guidance</td>
 									</tr>
 									<tr>
 										<td><a href="https://www.w3.org/TR/wai-aria-1.1/#menuitemcheckbox"><code>menuitemcheckbox</code></a></td>
-										<td>namerequired</td>
+										<td>Always</td>
 										<td>Yes</td>
 										<td>guidance</td>
 									</tr>
 									<tr>
 										<td><a href="https://www.w3.org/TR/wai-aria-1.1/#menuitemradio"><code>menuitemradio</code></a></td>
-										<td>namerequired</td>
+										<td>Always</td>
 										<td>Yes</td>
 										<td>guidance</td>
 									</tr>
@@ -4205,9 +4205,9 @@ However, most authors do not need detailed understanding of the algorithms since
 									</tr>
 									<tr>
 										<td><a href="https://www.w3.org/TR/wai-aria-1.1/#none"><code>none</code></a>, <a href="https://www.w3.org/TR/wai-aria-1.1/#presentation"><code>presentation</code></a></td>
-										<td>namerequired</td>
+										<td>Never</td>
 										<td>No</td>
-										<td>guidance</td>
+										<td></td>
 									</tr>
 									<tr>
 										<td><a href="https://www.w3.org/TR/wai-aria-1.1/#note"><code>note</code></a></td>
@@ -4217,31 +4217,31 @@ However, most authors do not need detailed understanding of the algorithms since
 									</tr>
 									<tr>
 										<td><a href="https://www.w3.org/TR/wai-aria-1.1/#option"><code>option</code></a></td>
-										<td>namerequired</td>
+										<td>Always</td>
 										<td>Yes</td>
 										<td>guidance</td>
 									</tr>
 									<tr>
 										<td><a href="https://www.w3.org/TR/wai-aria-1.1/#progressbar"><code>progressbar</code></a></td>
-										<td>namerequired</td>
+										<td>Always</td>
 										<td>No</td>
 										<td>guidance</td>
 									</tr>
 									<tr>
 										<td><a href="https://www.w3.org/TR/wai-aria-1.1/#radio"><code>radio</code></a></td>
-										<td>namerequired</td>
+										<td>Always</td>
 										<td>Yes</td>
 										<td>guidance</td>
 									</tr>
 									<tr>
 										<td><a href="https://www.w3.org/TR/wai-aria-1.1/#radiogroup"><code>radiogroup</code></a></td>
-										<td>namerequired</td>
+										<td>Always</td>
 										<td>No</td>
 										<td>guidance</td>
 									</tr>
 									<tr>
 										<td><a href="https://www.w3.org/TR/wai-aria-1.1/#region"><code>region</code></a></td>
-										<td>namerequired</td>
+										<td>Always</td>
 										<td>No</td>
 										<td>guidance</td>
 									</tr>
@@ -4259,13 +4259,13 @@ However, most authors do not need detailed understanding of the algorithms since
 									</tr>
 									<tr>
 										<td><a href="https://www.w3.org/TR/wai-aria-1.1/#rowheader"><code>rowheader</code></a></td>
-										<td>namerequired</td>
+										<td>Always</td>
 										<td>Yes</td>
 										<td>guidance</td>
 									</tr>
 									<tr>
 										<td><a href="https://www.w3.org/TR/wai-aria-1.1/#scrollbar"><code>scrollbar</code></a></td>
-										<td>namerequired</td>
+										<td>Always</td>
 										<td>No</td>
 										<td>guidance</td>
 									</tr>
@@ -4277,7 +4277,7 @@ However, most authors do not need detailed understanding of the algorithms since
 									</tr>
 									<tr>
 										<td><a href="https://www.w3.org/TR/wai-aria-1.1/#searchbox"><code>searchbox</code></a></td>
-										<td>namerequired</td>
+										<td>Always</td>
 										<td>No</td>
 										<td>guidance</td>
 									</tr>
@@ -4289,13 +4289,13 @@ However, most authors do not need detailed understanding of the algorithms since
 									</tr>
 									<tr>
 										<td><a href="https://www.w3.org/TR/wai-aria-1.1/#slider"><code>slider</code></a></td>
-										<td>namerequired</td>
+										<td>Always</td>
 										<td>No</td>
 										<td>guidance</td>
 									</tr>
 									<tr>
 										<td><a href="https://www.w3.org/TR/wai-aria-1.1/#spinbutton"><code>spinbutton</code></a></td>
-										<td>namerequired</td>
+										<td>Always</td>
 										<td>No</td>
 										<td>guidance</td>
 									</tr>
@@ -4307,7 +4307,7 @@ However, most authors do not need detailed understanding of the algorithms since
 									</tr>
 									<tr>
 										<td><a href="https://www.w3.org/TR/wai-aria-1.1/#switch"><code>switch</code></a></td>
-										<td>namerequired</td>
+										<td>Always</td>
 										<td>Yes</td>
 										<td>guidance</td>
 									</tr>
@@ -4319,7 +4319,7 @@ However, most authors do not need detailed understanding of the algorithms since
 									</tr>
 									<tr>
 										<td><a href="https://www.w3.org/TR/wai-aria-1.1/#table"><code>table</code></a></td>
-										<td>namerequired</td>
+										<td>Always</td>
 										<td>No</td>
 										<td>guidance</td>
 									</tr>
@@ -4331,7 +4331,7 @@ However, most authors do not need detailed understanding of the algorithms since
 									</tr>
 									<tr>
 										<td><a href="https://www.w3.org/TR/wai-aria-1.1/#tabpanel"><code>tabpanel</code></a></td>
-										<td>namerequired</td>
+										<td>Always</td>
 										<td>No</td>
 										<td>guidance</td>
 									</tr>
@@ -4343,13 +4343,13 @@ However, most authors do not need detailed understanding of the algorithms since
 									</tr>
 									<tr>
 										<td><a href="https://www.w3.org/TR/wai-aria-1.1/#textbox"><code>textbox</code></a></td>
-										<td>namerequired</td>
+										<td>Always</td>
 										<td>No</td>
 										<td>guidance</td>
 									</tr>
 									<tr>
 										<td><a href="https://www.w3.org/TR/wai-aria-1.1/#timer"><code>timer</code></a></td>
-										<td>namerequired</td>
+										<td>Always</td>
 										<td>No</td>
 										<td>guidance</td>
 									</tr>
@@ -4361,25 +4361,25 @@ However, most authors do not need detailed understanding of the algorithms since
 									</tr>
 									<tr>
 										<td><a href="https://www.w3.org/TR/wai-aria-1.1/#tooltip"><code>tooltip</code></a></td>
-										<td>namerequired</td>
+										<td>Always</td>
 										<td>Yes</td>
 										<td>guidance</td>
 									</tr>
 									<tr>
 										<td><a href="https://www.w3.org/TR/wai-aria-1.1/#tree"><code>tree</code></a></td>
-										<td>namerequired</td>
+										<td>Always</td>
 										<td>Yes</td>
 										<td>guidance</td>
 									</tr>
 									<tr>
 										<td><a href="https://www.w3.org/TR/wai-aria-1.1/#treegrid"><code>treegrid</code></a></td>
-										<td>namerequired</td>
+										<td>Always</td>
 										<td>No</td>
 										<td>guidance</td>
 									</tr>
 									<tr>
 										<td><a href="https://www.w3.org/TR/wai-aria-1.1/#treeitem"><code>treeitem</code></a></td>
-										<td>namerequired</td>
+										<td>Always</td>
 										<td>Yes</td>
 										<td>guidance</td>
 									</tr>
