--- a/examples/datepicker/datepicker-combobox.html
+++ b/examples/datepicker/datepicker-combobox.html
@@ -14,9 +14,9 @@
 <script src="../js/app.js"></script>
 
 <link href="css/datepicker.css" rel="stylesheet">
+<script src="js/datepicker-combobox.js" type="text/javascript"></script>
 <script src="js/datepickerDay.js" type="text/javascript"></script>
 <script src="js/datepicker.js" type="text/javascript"></script>
-<script src="js/datepicker-combobox.js" type="text/javascript"></script>
 </head>
 <body>
   <nav aria-label="Related Links" class="feedback">
@@ -63,6 +63,18 @@
                 aria-autocomplete="none"
                 aria-controls="id-datepicker-1">
 
+          <span class="arrow up">
+            <svg width="18" height="18">
+              <polygon points="4,16 14,16 9,9" style="fill:gray;stroke:gray;stroke-width:1" />
+            </svg>
+          </span>
+
+          <span class="arrow down">
+            <svg width="18" height="18">
+              <polygon points="4,9 14,9 9,16" style="fill:gray;stroke:gray;stroke-width:1" />
+            </svg>
+          </span>
+
           <button class="icon"
             tabIndex="-1"
             aria-label="Change Date"
@@ -72,8 +84,6 @@
             >
             <span class="fa fa-calendar-alt fa-2x"></span>
           </button>
-
-          <span class="arrow"></span>
 
         </div>
 
