--- a/aria-practices.html
+++ b/aria-practices.html
@@ -3703,18 +3703,26 @@
       Providing elements with accessible names, and where appropriate, accessible descriptions is one of the most fundamental and important responsibilities authors have when developing accessible web experiences.
       While doing so is straight forward for most elements, technical mistakes that can have devastating impacts on users of assistive technologies are easy to make and unfortunately common.
       To help authors provide effective and reliable accessible names and descriptions, this section explains their purpose, when authors need to provide them, how browsers assemble them, and rules for coding and composing them.
-      It then provides guidance for effectively employing the following naming and describing techniques and WAI-ARIA properties:
+      It also provides guidance for effectively employing the following naming and describing techniques and WAI-ARIA properties:
     </p>
     <ul>
-      <li>Naming with child content.</li>
-      <li>Naming with a String Attribute Via <code>aria-label</code>.</li>
-      <li>Naming by Referencing Content with <code>aria-labelledby</code>.</li>
-      <li>Naming by encapsulation with a label.</li>
-      <li>Naming with Legends and Captions.</li>
-      <li>Fallback Names Derived from Titles and Placeholders.</li>
-      <li>Describing by referencing content with <code>aria-describedby</code>.</li>
-      <li>Describing by referencing content with <code>aria-details</code>.</li>
-      <li>Fallback descriptions Derived from Titles and Placeholders.</li>
+      <li>Naming:
+        <ul>
+          <li>Naming with child content.</li>
+          <li>Naming with a string attribute via <code>aria-label</code>.</li>
+          <li>Naming by referencing content with <code>aria-labelledby</code>.</li>
+          <li>Naming by encapsulation with a label.</li>
+          <li>Naming with legends and captions.</li>
+          <li>Fallback names derived from titles and placeholders.</li>
+        </ul>
+      </li>
+      <li>Describing:
+        <ul>
+          <li>Describing by referencing content with <code>aria-describedby</code>.</li>
+          <li>Describing by referencing content with <code>aria-details</code>.</li>
+          <li>Fallback descriptions derived from titles and placeholders.</li>
+        </ul>
+      </li>
     </ul>
 
     <section id="names_and_descriptions_definition">
