Editorial revisions to clarity in naming rule 5

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -3805,9 +3805,9 @@ However, most authors do not need detailed understanding of the algorithms since
         <section id="naming_rule_brief_names">
           <h5>Rule 5: Compose Brief, Useful Names</h5>
           <p>
-            In the same way that visually crowded screens reduce usability, excessively long or insufficiently distinct accessible names can make a user interface very difficult, or even impossible, to use for someone who relies on a non-visual form of the user interface.
-            In other words, for a web experience to be accessible, the names must be effective.
-            The below section on <a href="#naming_effectively">Composing Effective and User-friendly Accessible Names</a> provides guidance for striking an effective balance between brevity and duplication.
+            Similar to how visually crowded screens and ambiguous icons reduce usability, excessively long, insufficiently distinct, or unclear  accessible names can make a user interface very difficult, or even impossible, to use for someone who relies on a non-visual form of the user interface.
+            In other words, for a web experience to be accessible, its accessible names must be effective.
+            The below section on <a href="#naming_effectively">Composing Effective and User-friendly Accessible Names</a> provides guidance for balancing brevity and clarity.
           </p>
         </section>
       </section>
