Provide intro to guidance by role table

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -3975,7 +3975,10 @@ However, most authors do not need detailed understanding of the algorithms since
 
       <section id="naming_role_guidance">
         <h4 id="naming_role_guidance_heading">Accessible Name Guidance by Role</h4>
-        <p>The following table </p>
+        <p>
+          Certain elements always require a name, others may usually or sometimes require a name, and still others should never be named.   
+          The following table provides requirements, allowed techniques, and guidance for each ARIA role. 
+        </p>
         <table aria-labelledby="naming_role_guidance_heading">
          <tr>
           <th>role</th>
