--- a/aria-practices.html
+++ b/aria-practices.html
@@ -3990,37 +3990,37 @@ However, most authors do not need detailed understanding of the algorithms since
 										<td><a href="#alert" class="role-reference"><code>alert</code></a></td>
 										<td>Sometimes</td>
 										<td>No</td>
-										<td>A name can sometimes be useful to know what kind of alert it is.</td>
+										<td>To-do: can we think of a circumstance where naming an alert would serve a useful purpose? Are there any assistive technologies that would render the boundaries of an alert container or have a way to render the name?</td>
 									</tr>
 									<tr>
 										<td><a href="#alertdialog" class="role-reference"><code>alertdialog</code></a></td>
 										<td>Always</td>
 										<td>No</td>
-										<td>guidance</td>
-									</tr>
+										<td>Named using <code>aria-labelledby</code> if a visible title is present, otherwise with <code>aria-label</code>.</td>
+								</tr>
 									<tr>
 										<td><a href="#application" class="role-reference"><code>application</code></a></td>
 										<td>Always</td>
 										<td>No</td>
-										<td>guidance</td>
+										<td></td>
 									</tr>
 									<tr>
 										<td><a href="#article" class="role-reference"><code>article</code></a></td>
-										<td>namerequired</td>
+										<td>Usually</td>
 										<td>No</td>
-										<td>guidance</td>
+										<td>Named using <code>aria-labelledby</code> if a visible title is present, otherwise with <code>aria-label</code></td>
 									</tr>
 									<tr>
 										<td><a href="#banner" class="role-reference"><code>banner</code></a></td>
-										<td>namerequired</td>
+										<td>Sometimes</td>
 										<td>No</td>
-										<td>guidance</td>
+										<td>Only necessary in the rare circumstances where two banner landmark regions are present on the same page. It is otherwise optional.</td>
 									</tr>
 									<tr>
 										<td><a href="#button" class="role-reference"><code>button</code></a></td>
 										<td>Always</td>
 										<td>Yes</td>
-										<td>guidance</td>
+										<td></td>
 									</tr>
 									<tr>
 										<td><a href="#cell" class="role-reference"><code>cell</code></a></td>
