Fix name on name guidance by role table

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -3974,7 +3974,7 @@ However, most authors do not need detailed understanding of the algorithms since
       </section>
 
       <section id="naming_role_guidance">
-        <h4 id="naming_role_guidance_heading">Accessible Name Guidance by Role</h4>
+        <h4><span id="naming_role_guidance_heading">Accessible Name Guidance by Role</span></h4>
         <p>
           Certain elements always require a name, others may usually or sometimes require a name, and still others should never be named.   
           The following table provides requirements, allowed techniques, and guidance for each ARIA role. 
