--- a/examples/disclosure/disclosure-navigation.html
+++ b/examples/disclosure/disclosure-navigation.html
@@ -14,7 +14,6 @@
 
   <!--  js and css for the disclosure example. -->
   <link href="css/disclosure-navigation.css" rel="stylesheet">
-  <script src="js/disclosureButton.js" type="text/javascript"></script>
   <script src="js/disclosureMenu.js" type="text/javascript"></script>
 
 </head>
@@ -32,123 +31,87 @@
   <p>
     The following example demonstrates using the
     <a href="../../#disclosure">disclosure design pattern</a>
-    used to create a multi-level navigation menu.
+    used to create a dropdown navigation menu.
   </p>
   <p>Similar examples include:</p>
   <ul>
-    <li>
-      <a href="disclosure-faq.html">Example Disclosure (Show/Hide) for Answers to Frequently Asked Questions</a>
-      <a href="disclosure-img-long-description.html">Example Disclosure (Show/Hide) for an Image Description</a>
-    </li>
+    <li><a href="disclosure-faq.html">Example Disclosure (Show/Hide) for Answers to Frequently Asked Questions</a></li>
+    <li><a href="disclosure-img-long-description.html">Example Disclosure (Show/Hide) for an Image Description</a></li>
   </ul>
   <section>
     <h2 id="ex_label">Example</h2>
     <div role="separator" id="ex_start_sep" aria-labelledby="ex_start_sep ex_label" aria-label="Start of" ></div>
     <div id="ex1">
       <nav aria-label="Mythical University">
-        <ul>
+        <ul class="disclosure-nav">
           <li>
             <button aria-expanded="true" aria-controls="id_about_menu">About</button>
-            <ul id="id_about_menu" style="display: none">
+            <ul id="id_about_menu">
               <li>
-                <a href="mb-about.html#overview">Overview</a>
+                <a href="#overview">Overview</a>
               </li>
               <li>
-                <a href="mb-about.html#admin">Administration</a>
+                <a href="#admin">Administration</a>
               </li>
               <li>
-                <a id="menubar113" role="menuitem" href="#" aria-haspopup="true" aria-expanded="false">Facts</a>
-                <ul>
-                  <li>
-                    <a href="mb-about.html#facts">History</a>
-                  </li>
-                  <li>
-                    <a href="mb-about.html#facts">Current Statistics</a>
-                  </li>
-                  <li>
-                    <a href="mb-about.html#facts">Awards</a>
-                  </li>
-                </ul>
+                <a href="#facts">Facts</a>
               </li>
               <li>
-                <a href="#" aria-haspopup="true" aria-expanded="false">Campus
-                  Tours</a>
-                <ul>
-                  <li>
-                    <a href="mb-about.html#tours">For prospective students</a>
-                  </li>
-                  <li>
-                    <a href="mb-about.html#tours">For alumni</a>
-                  </li>
-                  <li>
-                    <a href="mb-about.html#tours">For visitors</a>
-                  </li>
-                </ul>
+                <a href="#campus-tours">Campus Tours</a>
               </li>
             </ul>
           </li>
           <li>
             <button aria-expanded="true" aria-controls="id_admissions_menu">Admissions</button>
-            <ul id="id_admissions_menu" style="display: none">
+            <ul id="id_admissions_menu">
               <li>
-                <a href="mb-admissions.html#apply">Apply</a>
-              </li>
-              <li style="position: relative;">
-                <a href="#" aria-haspopup="true" aria-expanded="false">Tuition</a>
-                <ul style="display: none; position: absolute; left: 188.8px; z-index: 0;">
-                  <li>
-                    <a href="mb-admissions.html#tuition">Undergraduate</a>
-                  </li>
-                  <li>
-                    <a href="mb-admissions.html#tuition">Graduate</a>
-                  </li>
-                  <li>
-                    <a href="mb-admissions.html#tuition">Professional Schools</a>
-                  </li>
-                </ul>
+                <a href="#apply">Apply</a>
               </li>
               <li>
-                <a href="mb-admissions.html#signup">Sign Up</a>
+                <a href="#">Tuition</a>
+              </li>
+              <li>
+                <a href="#signup">Sign Up</a>
               </li>
               <li role="separator"></li>
               <li>
-                <a href="mb-admissions.html#visit">Visit</a>
+                <a href="#visit">Visit</a>
               </li>
               <li>
-                <a href="mb-admissions.html#photo">Photo Tour</a>
+                <a href="#photo">Photo Tour</a>
               </li>
               <li>
-                <a href="mb-admissions.html#connect">Connect</a>
+                <a href="#connect">Connect</a>
               </li>
             </ul>
           </li>
           <li>
             <button aria-expanded="true" aria-controls="id_academics_menu">Academics</button>
-            <ul id="id_academics_menu" style="display: none">
+            <ul id="id_academics_menu">
               <li>
-                <a href="mb-academics.html#colleges">Colleges &amp; Schools</a>
+                <a href="#colleges">Colleges &amp; Schools</a>
               </li>
               <li>
-                <a href="mb-academics.html#programs">Programs of Study</a>
+                <a href="#programs">Programs of Study</a>
               </li>
               <li>
-                <a href="mb-academics.html#honors">Honors Programs</a>
+                <a href="#honors">Honors Programs</a>
               </li>
               <li>
-                <a href="mb-academics.html#online">Online Courses</a>
+                <a href="#online">Online Courses</a>
               </li>
               <li role="separator"></li>
               <li>
-                <a href="mb-academics.html#explorer">Course Explorer</a>
+                <a href="#explorer">Course Explorer</a>
               </li>
               <li>
-                <a href="mb-academics.html#register">Register for Class</a>
+                <a href="#register">Register for Class</a>
               </li>
               <li>
-                <a href="mb-academics.html#academic">Academic Calendar</a>
+                <a href="#academic">Academic Calendar</a>
               </li>
               <li>
-                <a href="mb-academics.html#tanscripts">Transcripts</a>
+                <a href="#tanscripts">Transcripts</a>
               </li>
             </ul>
           </li>
@@ -158,23 +121,23 @@
     <div role="separator" id="ex_end_sep" aria-labelledby="ex_end_sep ex_label" aria-label="End of"></div>
   </section>
 
-  <!-- <section>
+  <section>
     <h2>Accessibility Features</h2>
     <ol>
       <li>
-        The semantic structure of the FAQ is conveyed with native <code>dl</code>, <code>dt</code> and <code>dd</code> elements.
-        So that the list structure is communicated to assistive technologies, instead of applying a button role to the <code>dt</code> element, a <code>button</code> element is contained within the <code>dd</code> element.
-        Similarly, the container for the answer content that is shown and hidden is inside of the <code>dd</code> element so the <code>dl</code> structure is complete even when the answers are all hidden.
+        Since this disclosure example is being used as a navigation menu, the entire control is wrapped in a navigation landmark. Each disclosure button / container pair is contained within a list item so that the number of top-level items is semantically available.
       </li>
-      <li> The visual indication of expanded and collapsed states is synchronized with the value of <code>aria-expanded</code> using a CSS attribute selector and <code>:before</code> pseudo element that generates an image with the <code>content</code> property.</li>
-      <li>The interactivity of the question is visually indicated on focus and hover:
-        <ul>
-          <li>The CSS <code>:focus</code> pseudo class is used to change the background and border colors.</li>
-          <li>The CSS <code>:hover</code> pseudo class is used to change the background color and underline the text.</li>
-        </ul>
+      <li>
+        The visual indication of expanded and collapsed states is synchronized with the value of <code>aria-expanded</code> using a CSS attribute selector and <code>:before</code> pseudo element that generates an image with the <code>content</code> property.
+      </li>
+      <li>
+        Arrow keys supplement, but do not replace, tabbing between the top-level disclosure buttons. Home and End likewise allow jumping to the first and last button.
+      </li>
+      <li>
+        Escape pressed when focus is within the navigation menu closes any open dropdown menus. Moving focus out of the navigation region also closes open dropdowns.
       </li>
     </ol>
-  </section> -->
+  </section>
 
   <section>
     <h2 id="kbd_label">Keyboard Support</h2>
@@ -191,7 +154,7 @@
             <kbd>Tab</kbd>
           </th>
           <td>
-              Moves keyboard focus to the disclosure button.
+              Moves keyboard focus between top-level buttons, and into any open menu
           </td>
         </tr>
         <tr data-test-id="key-enter-or-space">
@@ -201,7 +164,31 @@
           </th>
           <td>
               Activates the disclosure button,
-              which toggles the visibility of the answer to the question.
+              which toggles the visibility of the dropdown menu.
+          </td>
+        </tr>
+        <tr data-test-id="key-arrow-prev">
+          <th>
+            <kbd>Escape</kbd>
+          </th>
+          <td>
+              Closes the open dropdown menu
+          </td>
+        </tr>
+        <tr data-test-id="key-arrow-prev">
+          <th>
+            <kbd>Arrow keys</kbd>
+          </th>
+          <td>
+              Moves focus between the top-level disclosure buttons.
+          </td>
+        </tr>
+        <tr data-test-id="key-arrow-prev">
+          <th>
+            <kbd>Home / End</kbd>
+          </th>
+          <td>
+              Moves focus to the first or last disclosure button
           </td>
         </tr>
       </tbody>
@@ -296,7 +283,7 @@
       </li>
       <li>
         Javascript:
-        <a href="js/disclosureButton.js" type="text/javascript">disclosureButton.js</a>
+        <a href="js/disclosureMenu.js" type="text/javascript">disclosureMenu.js</a>
       </li>
     </ul>
   </section>
