Update to-do description for label encapsulation

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -3950,7 +3950,12 @@ However, most authors do not need detailed understanding of the algorithms since
 
         <section id="naming_with_labels">
           <h5>Naming by Encapsulation with a Label</h5>
-          <p>To-do: write this section. Note that we could describe the ARIA label role, but state that it is not supported until ARIA 1.2 is a recommendation So, in this version, we should talk about the HTML technique first.(suggestion - specifically mention Form element, and refer back to caridinal rule 2: prefer visible text, and rule 3: prefer native techniques</p>
+          <p>
+            To-do: write this section. This version WILL NOT include the new ARIA 1.2 label role.
+            The 1.2 label role will be added after the July release of APG 1.1 R4.
+            So, in this version, we should talk about the HTML technique.
+            Specifically illustrate Form element labeling, and refer back to caridinal rule 2: prefer visible text, and rule 3: prefer native techniques.
+          </p>
         </section>
 
         <section id="naming_with_legends_and_captions">
