Update to-do description for labeling with legend

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -3954,13 +3954,17 @@ However, most authors do not need detailed understanding of the algorithms since
             To-do: write this section. This version WILL NOT include the new ARIA 1.2 label role.
             The 1.2 label role will be added after the July release of APG 1.1 R4.
             So, in this version, we should talk about the HTML technique.
-            Specifically illustrate Form element labeling, and refer back to caridinal rule 2: prefer visible text, and rule 3: prefer native techniques.
+            Specifically illustrate Form element labeling, and refer back to cardinal rule 2: prefer visible text, and rule 3: prefer native techniques.
           </p>
         </section>
 
         <section id="naming_with_legends_and_captions">
           <h5>Naming with Legends and Captions</h5>
-          <p>To-do: write this section. Note that we could describe the ARIA legend role, but state that it is not supported until ARIA 1.2 is a recommendation So, in this version, we should talk about the HTML technique first.</p>
+          <p>
+            To-do: write this section. 
+            This version will not include the ARIA 1.2 legend role; it will be added in a version after the APG 1.1 R4 release in July.
+            Specifically illustrate Form element labeling, and refer back to cardinal rule 2: prefer visible text, and rule 3: prefer native techniques.
+          </p>
         </section>
 
         <section id="naming_with_fallback">
